Header Background-3d pending fix image bottom gap v5

--- a/main.css
+++ b/main.css
@@ -97,6 +97,7 @@ section{
   #header-right{
     padding-bottom: -20px;
     z-index: 3;
+    margin-bottom: -4px;
   }
 
   div.gallery {
